--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "laracasts/flash": "^3.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "nesbot/carbon": "^2.46",
         "squizlabs/php_codesniffer": "*"
     },
     "require-dev": {
