--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "phpcs": "phpcs --standard=PSR12"
     },
     "extra": {
         "laravel": {
