--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
+DB_CONNECTION=sqlite
+DB_HOST=localhost
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
