--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "imangazaliev/didom": "^1.16",
         "laracasts/flash": "^3.2",
         "laravel/framework": "^8.12",
         "laravel/telescope": "^4.4",
