--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "phpcs": "phpcs --standard=PSR12"
+        "phpcs": "phpcs --standard=PSR12",
+        "phpunit": "phpunit",
+        "test": "phpunit tests"
+
     },
     "extra": {
         "laravel": {
