--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         uses: paambaati/codeclimate-action@v2.6.0
             # Add Code Climate secret key
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.HEXLET_ID }}
+          CC_TEST_REPORTER_ID: ${{ secrets.REPORTER_ID }}
         with:
           coverageCommand: make test-coverage
           coverageLocations: ${{github.workplace}}/build/logs/clover.xml:clover
