--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
         uses: paambaati/codeclimate-action@v2.6.0
             # Add Code Climate secret key
         env:
+          XDEBUG_MODE: coverage
           CC_TEST_REPORTER_ID: ${{ secrets.HEXLET_ID }}
         with:
           coverageCommand: make test-coverage
