--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         "laracasts/flash": "^3.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "nesbot/carbon": "^2.46"
+        "nesbot/carbon": "^2.46",
+        "laravel/telescope": "^4.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
-        "laravel/telescope": "^4.4",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3",
