--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "nesbot/carbon": "^2.46",
-      "ext-pdo": "*"
+        "nesbot/carbon": "^2.46"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
