--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "resolve-url-loader": "^3.1.3",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
-    }
+    },
+    "engines": {
+    "node": "14.15"
+}
 }
