--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-
+        "production": "mix --production",
+        "postinstall": "npm run prod",
         "heroku-postbuild": "npm run production"
     },
     "devDependencies": {
