--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3",
+        "rector/rector": "^0.11.5",
         "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
